# Rust-Projects

./: .gitignore  README.md
Book/guessing-game/: Cargo.toml
Book/guessing-game/src/: main.rs
Pengolodh/backend/: Cargo.toml
Pengolodh/backend/src/: main.rs
Pengolodh/backend/src/rag/: chunker.rs  mod.rs
Pengolodh/qdrant/: docker-compose.yml
