[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lopdf = "0.26"
qdrant-client = "1.6"
dotenv = "0.15"
anyhow = "1.0"
